--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>protalento-bootcamp</groupId>
   <version>0.0.1-SNAPSHOT</version>
-  <artifactId>proyecto1</artifactId>
+  <artifactId>app-parent</artifactId>
   <packaging>pom</packaging>
   <name>primer artefacto creado con maven+eclipse+github</name>
   <modules>
   	<module>pruebas</module>
+  	<module>app-web</module>
   </modules>
   
 </project>
