--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -14,4 +14,20 @@
   	<maven.compiler.source>11</maven.compiler.source>
   </properties>
   
+  <!-- AGREGAR  -->
+  <dependencies>
+	<!-- https://mvnrepository.com/artifact|/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.28</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>protalento-bootcamp</groupId>
+		<artifactId>app-domain</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	
+  </dependencies>
 </project>
