--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -29,5 +29,12 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>3.15</version>
+	</dependency>
+	
   </dependencies>
 </project>
