--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -52,6 +52,12 @@
 		<version>4.0.1</version>
 		<scope>provided</scope>
 	</dependency>
-		
+	
+	<!-- https://github.com/patrickfav/bcrypt/tree/master -->
+	<dependency>
+		<groupId>at.favre.lib</groupId>
+		<artifactId>bcrypt</artifactId>
+		<version>0.9.0</version>
+	</dependency>
   </dependencies>
 </project>
