--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -59,6 +59,20 @@
 		<artifactId>bcrypt</artifactId>
 		<version>0.9.0</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.13.0</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.mercadopago/sdk-java -->
+<!-- <dependency> -->
+<!--     <groupId>com.mercadopago</groupId> -->
+<!--     <artifactId>sdk-java</artifactId> -->
+<!--     <version>2.0.1</version> -->
+<!-- </dependency> -->
+	
   </dependencies>
   
   <build>
@@ -86,6 +100,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 		</plugins>
 	</build>
 </project>
