--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>protalento-bootcamp</groupId>
@@ -7,14 +8,17 @@
   <name>primer artefacto creado con maven+eclipse+github</name>
 
   <properties>
-  	<maven.compiler.target>11</maven.compiler.target>
-  	<maven.compiler.source>11</maven.compiler.source>
+  	<maven.compiler.target>1.8</maven.compiler.target>
+  	<maven.compiler.source>1.8</maven.compiler.source>
   </properties>
   
   <modules>
 <!--   	<module>pruebas</module> -->
   	<module>app-web</module>
   	<module>app-domain</module>
+    <module>app-rest</module>
+    <module>app-service</module>
+    <module>app-dao</module>
   </modules>
   
 </project>
